force-app/main/default/objects/PgM_Approval__c/PgM_Approval__c.object-meta.xml
<CustomObject>
    <label>Approval</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Approval</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>