force-app/main/default/objects/PgM_Approval__c/fields/PgM_Acceptance_Outcome__c.field-meta.xml
<CustomField>
    <fullName>PgM_Acceptance_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acceptance Outcome</label>
    <referenceTo>PgM_Outcome__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>