force-app/main/default/objects/PgM_Approval__c/fields/PgM_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Approval_Date__c</fullName>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>