force-app/main/default/objects/PgM_Approval__c/fields/PgM_Last_Comment__c.field-meta.xml
<CustomField>
    <fullName>PgM_Last_Comment__c</fullName>
    <label>Last Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>