force-app/main/default/objects/PgM_Approval__c/fields/PgM_RAID_Log__c.field-meta.xml
<CustomField>
    <fullName>PgM_RAID_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RAID Log</label>
    <referenceTo>PgM_RAID_Log__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>