force-app/main/default/objects/PgM_Approval__c/fields/PgM_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>PgM_Record_Id__c</fullName>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>