force-app/main/default/objects/PgM_Approval__c/fields/PgM_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>PgM_Record_Name__c</fullName>
    <label>Record Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>