force-app/main/default/objects/PgM_Approval__c/fields/PgM_Record_to_Approve__c.field-meta.xml
<CustomField>
    <fullName>PgM_Record_to_Approve__c</fullName>
    <formula>HYPERLINK( PgM_Record_URL__c ,  PgM_Record_Name__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record to Approve</label>
    <type>Text</type>
</CustomField>