force-app/main/default/objects/PgM_Approval__c/fields/PgM_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>PgM_Record_URL__c</fullName>
    <label>Record URL</label>
    <type>Url</type>
</CustomField>