force-app/main/default/objects/PgM_Approval__c/fields/PgM_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PgM_Status_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status Indicator</label>
    <referenceTo>PgM_Status_Indicator__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>