force-app/main/default/objects/PgM_Approval__c/fields/PgM_Submitter__c.field-meta.xml
<CustomField>
    <fullName>PgM_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>