force-app/main/default/objects/PgM_Approval__c/fields/PgM_Type__c.field-meta.xml
<CustomField>
    <fullName>PgM_Type__c</fullName>
    <label>Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>