force-app/main/default/objects/PgM_Approval__c/recordTypes/Decision_Approval.recordType-meta.xml
<RecordType>
    <fullName>Decision_Approval</fullName>
    <active>true</active>
    <label>Decision Approval</label>
</RecordType>