force-app/main/default/objects/PgM_Approval__c/recordTypes/Deliverable_Approval.recordType-meta.xml
<RecordType>
    <fullName>Deliverable_Approval</fullName>
    <active>true</active>
    <label>Deliverable Approval</label>
</RecordType>