force-app/main/default/objects/PgM_Approval__c/recordTypes/Outcome_Approval.recordType-meta.xml
<RecordType>
    <fullName>Outcome_Approval</fullName>
    <active>true</active>
    <label>Outcome Approval</label>
</RecordType>