force-app/main/default/objects/PgM_Approval__c/recordTypes/Status_Indicator_Approval.recordType-meta.xml
<RecordType>
    <fullName>Status_Indicator_Approval</fullName>
    <active>true</active>
    <label>Status Indicator Approval</label>
</RecordType>