force-app/main/default/objects/PgM_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PgM_Record_to_Approve__c</columns>
    <columns>PgM_Approver__c</columns>
    <columns>PgM_Submitter__c</columns>
    <columns>PgM_Type__c</columns>
    <columns>PgM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>