force-app/main/default/objects/PgM_Approval__c/listViews/My_Approvals.listView-meta.xml
<ListView>
    <fullName>My_Approvals</fullName>
    <columns>NAME</columns>
    <columns>PgM_Record_to_Approve__c</columns>
    <columns>PgM_Approver__c</columns>
    <columns>PgM_Submitter__c</columns>
    <columns>PgM_Type__c</columns>
    <columns>PgM_Status__c</columns>
    <columns>PgM_Last_Comment__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PgM_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>My Approvals</label>
</ListView>